--- a/CMS1/appsettings.json
+++ b/CMS1/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "server=Kachezi;database=StoreManager;User ID=sa;password=Peter@2021!;MultipleActiveResultSets=true;"
+    "DefaultConnection": "server=Kachezi;database=CMSProject;User ID=sa;password=Peter@2021!;MultipleActiveResultSets=true;"
 
     //"DefaultConnection": "server=lim202.truehost.cloud,1435;database=winkadfr_pos;User ID=winkadfr_pos;password=9Hp7#w4y3;MultipleActiveResultSets=true;"
 
